Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14836

Assertion `m_status == DA_ERROR' failed in Diagnostics_area::sql_errno upon query from I_S with LIMIT ROWS EXAMINED

    XMLWordPrintable

Details

    Description

      --source include/have_innodb.inc
       
      SELECT * FROM INFORMATION_SCHEMA.`COLUMNS` LIMIT ROWS EXAMINED 10;
      

      10.2 debug 36c01167200

      mysqld: /data/src/10.2/sql/sql_error.h:728: uint Diagnostics_area::sql_errno() const: Assertion `m_status == DA_ERROR' failed.
      180413 13:17:52 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007f5bab788ee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x00005649121e4658 in Diagnostics_area::sql_errno (this=0x7f5b5c005c90) at /data/src/10.2/sql/sql_error.h:728
      #9  0x0000564912344b06 in fill_schema_table_by_open (thd=0x7f5b5c000b00, is_show_fields_or_keys=false, table=0x7f5b5c14a688, schema_table=0x564913642100 <schema_tables+320>, orig_db_name=0x7f5b5c03ac40, orig_table_name=0x7f5b5c092a48, open_tables_state_backup=0x7f5ba43f37f0, can_deadlock=false) at /data/src/10.2/sql/sql_show.cc:4383
      #10 0x000056491234626d in get_all_tables (thd=0x7f5b5c000b00, tables=0x7f5b5c0128a8, cond=0x0) at /data/src/10.2/sql/sql_show.cc:5001
      #11 0x000056491235641e in get_schema_tables_result (join=0x7f5b5c014998, executed_place=PROCESSED_BY_JOIN_EXEC) at /data/src/10.2/sql/sql_show.cc:8350
      #12 0x00005649122f3d8b in JOIN::exec_inner (this=0x7f5b5c014998) at /data/src/10.2/sql/sql_select.cc:3530
      #13 0x00005649122f3444 in JOIN::exec (this=0x7f5b5c014998) at /data/src/10.2/sql/sql_select.cc:3361
      #14 0x00005649122f460f in mysql_select (thd=0x7f5b5c000b00, tables=0x7f5b5c0128a8, wild_num=1, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2684619520, result=0x7f5b5c014978, unit=0x7f5b5c0046a8, select_lex=0x7f5b5c004de0) at /data/src/10.2/sql/sql_select.cc:3761
      #15 0x00005649122e8c56 in handle_select (thd=0x7f5b5c000b00, lex=0x7f5b5c0045e0, result=0x7f5b5c014978, setup_tables_done_option=0) at /data/src/10.2/sql/sql_select.cc:376
      #16 0x00005649122b4a12 in execute_sqlcom_select (thd=0x7f5b5c000b00, all_tables=0x7f5b5c0128a8) at /data/src/10.2/sql/sql_parse.cc:6472
      #17 0x00005649122aaa99 in mysql_execute_command (thd=0x7f5b5c000b00) at /data/src/10.2/sql/sql_parse.cc:3483
      #18 0x00005649122b845a in mysql_parse (thd=0x7f5b5c000b00, rawbuf=0x7f5b5c012640 "SELECT * FROM INFORMATION_SCHEMA.`COLUMNS` LIMIT ROWS EXAMINED 10", length=65, parser_state=0x7f5ba43f5200, is_com_multi=false, is_next_command=false) at /data/src/10.2/sql/sql_parse.cc:7918
      #19 0x00005649122a632b in dispatch_command (command=COM_QUERY, thd=0x7f5b5c000b00, packet=0x7f5b5c008951 "SELECT * FROM INFORMATION_SCHEMA.`COLUMNS` LIMIT ROWS EXAMINED 10", packet_length=65, is_com_multi=false, is_next_command=false) at /data/src/10.2/sql/sql_parse.cc:1820
      #20 0x00005649122a4c8e in do_command (thd=0x7f5b5c000b00) at /data/src/10.2/sql/sql_parse.cc:1374
      #21 0x00005649123f3602 in do_handle_one_connection (connect=0x5649152c5e90) at /data/src/10.2/sql/sql_connect.cc:1335
      #22 0x00005649123f338f in handle_one_connection (arg=0x5649152c5e90) at /data/src/10.2/sql/sql_connect.cc:1241
      #23 0x000056491281357a in pfs_spawn_thread (arg=0x5649152297d0) at /data/src/10.2/storage/perfschema/pfs.cc:1862
      #24 0x00007f5bad45f494 in start_thread (arg=0x7f5ba43f6700) at pthread_create.c:333
      #25 0x00007f5bab84593f in clone () from /lib/x86_64-linux-gnu/libc.so.6
      

      Non-debug build produces a number of strange warnings:

      10.2 non-debug d18a66147c

      Warnings:
      Warning	1105	
      Warning	1105	
      Warning	1105	
      ...
      Warning	1105	
      

      Reproducible on 10.2, 10.3. Not reproducible on 10.1.

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 3.85h
                  5d 3.85h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.