MDEV-14836: Assertion `m_status == DA_ERROR' failed in Diagnostics_area::sql_errno upon query from I_S with LIMIT ROWS EXAMINED

Query is aborted because number of examined rows exceeds LIMIT EXAMINED ROWS.
Even though this is not a real error, open_normal_and_derived_tables()
returns true. As a result, thd->is_errno() is called and thus the assertion
failure.